[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Layers/LayerConfiguration/SpecificLayerUI/VegetationLayer.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/TextBold.tres" type="FontFile" id=2]
[ext_resource path="res://UI/Layers/LayerConfiguration/Misc/GeodataChooser.tscn" type="PackedScene" id=3]

[node name="VegetationLayer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.275
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
offset_right = 1920.0
offset_bottom = 236.0

[node name="LeftBox" type="VBoxContainer" parent="HSplitContainer"]
offset_right = 134.0
offset_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="HSplitContainer/LeftBox"]
offset_right = 134.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="HSplitContainer/LeftBox/Title"]
offset_right = 134.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Vegetation Layer"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/LeftBox/Title"]
offset_top = 31.0
offset_right = 134.0
offset_bottom = 39.0

[node name="Height" type="Label" parent="HSplitContainer/LeftBox"]
offset_top = 58.0
offset_right = 134.0
offset_bottom = 143.0
minimum_size = Vector2( 0, 85 )
text = "Heightmap:"

[node name="LandUse" type="Label" parent="HSplitContainer/LeftBox"]
offset_top = 151.0
offset_right = 134.0
offset_bottom = 236.0
minimum_size = Vector2( 0, 85 )
text = "Land use:"

[node name="RightBox" type="VBoxContainer" parent="HSplitContainer"]
offset_left = 158.0
offset_right = 1920.0
offset_bottom = 236.0

[node name="Spacer" type="Control" parent="HSplitContainer/RightBox"]
offset_right = 1762.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="HeightChooser" parent="HSplitContainer/RightBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 58.0
offset_right = 1762.0
offset_bottom = 143.0

[node name="LanduseChooser" parent="HSplitContainer/RightBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 151.0
offset_right = 1762.0
offset_bottom = 236.0

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 244.0
offset_right = 1920.0
offset_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VegEditButton" type="Button" parent="."]
offset_top = 260.0
offset_right = 1920.0
offset_bottom = 297.0
text = "Open Vegetation Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VegEditDialog" type="Window" parent="VegEditButton"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -120.0
offset_bottom = 463.0
minimum_size = Vector2( 1800, 800 )
size_flags_horizontal = 8
size_flags_vertical = 8
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}
